--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PORT = 3000
 
 DB_USERNAME = postgres
-DB_PASSWORD = null
+DB_PASSWORD = sukses123
 DB_DATABASE = JWT-ORM
 DB_HOST = 127.0.0.1
+
+
+BASE_URL = /api/v1
